[package]
name = "strava_activity_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
confy = "0.6.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_derive = "1.0.202"
tokio = { version = "1.37.0", features = ["full"] }

[[bin]]
name = "strava_activity_downloader"
